// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when bail is not set should print the error 1`] = `
"[31merror[39m - 
    ResolveError: Validation error
        Path: <PROJECT_ROOT>/packages/cli/integration/generate-multi-errors/components/foo.js
        Index: [0]
        Kind: v1/Pod
        Name: foo
        Cause: Error: data/spec must have required property 'containers', data/spec must be null, data/spec must match exactly one schema in oneOf
            at validate (<PROJECT_ROOT>/node_modules/.pnpm/@kubernetes-models+validate@2.0.1/node_modules/@kubernetes-models/validate/dist/validate.js:9:21)
            at Pod.validate (<PROJECT_ROOT>/node_modules/.pnpm/@kubernetes-models+base@3.0.0/node_modules/@kubernetes-models/base/dist/model.js:44:33)
            at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:134:29)
            at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:75:42)
            at generate (<PROJECT_ROOT>/packages/generate/dist/generate.js:70:60)
            at async handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/worker.js:23:20)
            at async Object.handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/command.js:79:9)
        at createResolveError (<PROJECT_ROOT>/packages/generate/dist/resolve.js:45:16)
        at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:137:23)
        at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:75:42)
        at generate (<PROJECT_ROOT>/packages/generate/dist/generate.js:70:60)
        at async handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/worker.js:23:20)
        at async Object.handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/command.js:79:9)
    AggregateError: 
        ResolveError: Validation error
            Path: <PROJECT_ROOT>/packages/cli/integration/generate-multi-errors/components/nginx.js
            Index: [0]
            Kind: apps/v1/Deployment
            Name: nginx
            Cause: Error: data/spec must have required property 'selector', data/spec must be null, data/spec must match exactly one schema in oneOf
                at validate (<PROJECT_ROOT>/node_modules/.pnpm/@kubernetes-models+validate@2.0.1/node_modules/@kubernetes-models/validate/dist/validate.js:9:21)
                at Deployment.validate (<PROJECT_ROOT>/node_modules/.pnpm/@kubernetes-models+base@3.0.0/node_modules/@kubernetes-models/base/dist/model.js:44:33)
                at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:134:29)
                at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:75:42)
                at generate (<PROJECT_ROOT>/packages/generate/dist/generate.js:70:60)
                at async handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/worker.js:23:20)
                at async Object.handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/command.js:79:9)
            at createResolveError (<PROJECT_ROOT>/packages/generate/dist/resolve.js:45:16)
            at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:137:23)
            at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:75:42)
            at generate (<PROJECT_ROOT>/packages/generate/dist/generate.js:70:60)
            at async handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/worker.js:23:20)
            at async Object.handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/command.js:79:9)
        ResolveError: Validation error
            Path: <PROJECT_ROOT>/packages/cli/integration/generate-multi-errors/components/nginx.js
            Index: [1]
            Kind: v1/Service
            Name: nginx
            Cause: Error: data/spec/type must be equal to one of the allowed values, data/spec must be null, data/spec must match exactly one schema in oneOf
                at validate (<PROJECT_ROOT>/node_modules/.pnpm/@kubernetes-models+validate@2.0.1/node_modules/@kubernetes-models/validate/dist/validate.js:9:21)
                at Service.validate (<PROJECT_ROOT>/node_modules/.pnpm/@kubernetes-models+base@3.0.0/node_modules/@kubernetes-models/base/dist/model.js:44:33)
                at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:134:29)
                at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:75:42)
                at async generate (<PROJECT_ROOT>/packages/generate/dist/generate.js:70:32)
                at async handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/worker.js:23:20)
                at async Object.handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/command.js:79:9)
            at createResolveError (<PROJECT_ROOT>/packages/generate/dist/resolve.js:45:16)
            at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:137:23)
            at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:75:42)
            at async generate (<PROJECT_ROOT>/packages/generate/dist/generate.js:70:32)
            at async handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/worker.js:23:20)
            at async Object.handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/command.js:79:9)
        at aggregateErrors (<PROJECT_ROOT>/packages/generate/dist/error.js:33:12)
        at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:95:47)
        at async generate (<PROJECT_ROOT>/packages/generate/dist/generate.js:70:32)
        at async handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/worker.js:23:20)
        at async Object.handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/command.js:79:9)
[90mAggregateError: 
    ResolveError: Validation error
        Path: <PROJECT_ROOT>/packages/cli/integration/generate-multi-errors/components/foo.js
        Index: [0]
        Kind: v1/Pod
        Name: foo
        Cause: Error: data/spec must have required property 'containers', data/spec must be null, data/spec must match exactly one schema in oneOf
            at validate (<PROJECT_ROOT>/node_modules/.pnpm/@kubernetes-models+validate@2.0.1/node_modules/@kubernetes-models/validate/dist/validate.js:9:21)
            at Pod.validate (<PROJECT_ROOT>/node_modules/.pnpm/@kubernetes-models+base@3.0.0/node_modules/@kubernetes-models/base/dist/model.js:44:33)
            at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:134:29)
            at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:75:42)
            at generate (<PROJECT_ROOT>/packages/generate/dist/generate.js:70:60)
            at async handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/worker.js:23:20)
            at async Object.handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/command.js:79:9)
        at createResolveError (<PROJECT_ROOT>/packages/generate/dist/resolve.js:45:16)
        at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:137:23)
        at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:75:42)
        at generate (<PROJECT_ROOT>/packages/generate/dist/generate.js:70:60)
        at async handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/worker.js:23:20)
        at async Object.handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/command.js:79:9)
    AggregateError: 
        ResolveError: Validation error
            Path: <PROJECT_ROOT>/packages/cli/integration/generate-multi-errors/components/nginx.js
            Index: [0]
            Kind: apps/v1/Deployment
            Name: nginx
            Cause: Error: data/spec must have required property 'selector', data/spec must be null, data/spec must match exactly one schema in oneOf
                at validate (<PROJECT_ROOT>/node_modules/.pnpm/@kubernetes-models+validate@2.0.1/node_modules/@kubernetes-models/validate/dist/validate.js:9:21)
                at Deployment.validate (<PROJECT_ROOT>/node_modules/.pnpm/@kubernetes-models+base@3.0.0/node_modules/@kubernetes-models/base/dist/model.js:44:33)
                at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:134:29)
                at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:75:42)
                at generate (<PROJECT_ROOT>/packages/generate/dist/generate.js:70:60)
                at async handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/worker.js:23:20)
                at async Object.handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/command.js:79:9)
            at createResolveError (<PROJECT_ROOT>/packages/generate/dist/resolve.js:45:16)
            at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:137:23)
            at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:75:42)
            at generate (<PROJECT_ROOT>/packages/generate/dist/generate.js:70:60)
            at async handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/worker.js:23:20)
            at async Object.handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/command.js:79:9)
        ResolveError: Validation error
            Path: <PROJECT_ROOT>/packages/cli/integration/generate-multi-errors/components/nginx.js
            Index: [1]
            Kind: v1/Service
            Name: nginx
            Cause: Error: data/spec/type must be equal to one of the allowed values, data/spec must be null, data/spec must match exactly one schema in oneOf
                at validate (<PROJECT_ROOT>/node_modules/.pnpm/@kubernetes-models+validate@2.0.1/node_modules/@kubernetes-models/validate/dist/validate.js:9:21)
                at Service.validate (<PROJECT_ROOT>/node_modules/.pnpm/@kubernetes-models+base@3.0.0/node_modules/@kubernetes-models/base/dist/model.js:44:33)
                at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:134:29)
                at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:75:42)
                at async generate (<PROJECT_ROOT>/packages/generate/dist/generate.js:70:32)
                at async handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/worker.js:23:20)
                at async Object.handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/command.js:79:9)
            at createResolveError (<PROJECT_ROOT>/packages/generate/dist/resolve.js:45:16)
            at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:137:23)
            at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:75:42)
            at async generate (<PROJECT_ROOT>/packages/generate/dist/generate.js:70:32)
            at async handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/worker.js:23:20)
            at async Object.handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/command.js:79:9)
        at aggregateErrors (<PROJECT_ROOT>/packages/generate/dist/error.js:33:12)
        at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:95:47)
        at async generate (<PROJECT_ROOT>/packages/generate/dist/generate.js:70:32)
        at async handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/worker.js:23:20)
        at async Object.handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/command.js:79:9)
    at aggregateErrors (<PROJECT_ROOT>/packages/generate/dist/error.js:33:12)
    at generate (<PROJECT_ROOT>/packages/generate/dist/generate.js:86:43)
    at async handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/worker.js:23:20)
    at async Object.handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/command.js:79:9)[39m"
`;

exports[`when bail is true should print the error 1`] = `
"[31merror[39m - Validation error
[90mResolveError: Validation error
    Path: <PROJECT_ROOT>/packages/cli/integration/generate-multi-errors/components/foo.js
    Index: [0]
    Kind: v1/Pod
    Name: foo
    Cause: Error: data/spec must have required property 'containers', data/spec must be null, data/spec must match exactly one schema in oneOf
        at validate (<PROJECT_ROOT>/node_modules/.pnpm/@kubernetes-models+validate@2.0.1/node_modules/@kubernetes-models/validate/dist/validate.js:9:21)
        at Pod.validate (<PROJECT_ROOT>/node_modules/.pnpm/@kubernetes-models+base@3.0.0/node_modules/@kubernetes-models/base/dist/model.js:44:33)
        at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:134:29)
        at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:75:42)
        at generate (<PROJECT_ROOT>/packages/generate/dist/generate.js:70:60)
        at async handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/worker.js:23:20)
        at async Object.handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/command.js:79:9)
    at createResolveError (<PROJECT_ROOT>/packages/generate/dist/resolve.js:45:16)
    at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:137:23)
    at resolve (<PROJECT_ROOT>/packages/generate/dist/resolve.js:75:42)
    at generate (<PROJECT_ROOT>/packages/generate/dist/generate.js:70:60)
    at async handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/worker.js:23:20)
    at async Object.handler (<PROJECT_ROOT>/packages/cli/dist/commands/generate/command.js:79:9)[39m"
`;
